Broken vertex weights after two mesh joining. #51520

Closed
opened 2017-05-16 13:51:58 +02:00 by Alexander Romanov · 11 comments

Blender Version
Last stable and actual master

Short description of error
After joining of two meshes vertex weights on one mesh become empty.

Exact steps for others to reproduce the error

  • Open the attached file
  • Select "obj1" and "obj2" 1.png
  • Press Ctrl+J to join them
  • You will see incorrect transform of one of the objects
    2.png

vertex_weight_bug.blend

**Blender Version** Last stable and actual master **Short description of error** After joining of two meshes vertex weights on one mesh become empty. **Exact steps for others to reproduce the error** - Open the attached file - Select "obj1" and "obj2" ![1.png](https://archive.blender.org/developer/F599965/1.png) - Press Ctrl+J to join them - You will see incorrect transform of one of the objects ![2.png](https://archive.blender.org/developer/F599968/2.png) [vertex_weight_bug.blend](https://archive.blender.org/developer/F599952/vertex_weight_bug.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @AlexanderRomanov

Added subscriber: @AlexanderRomanov

Added subscriber: @FloridaJo

Added subscriber: @FloridaJo

I find if you apply the armature to the smaller obj1 (small obj) first, then shift sel obj2 then ctrl + J, it works fine.

I find if you apply the armature to the smaller obj1 (small obj) first, then shift sel obj2 then ctrl + J, it works fine.
Bastien Montagne self-assigned this 2017-05-22 13:23:44 +02:00

This issue was referenced by e3d6321530

This issue was referenced by e3d63215308fc2c8b639ee00845344ea735a46e3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Holly cow! Issue here is that CDLayer of vgroups for your MEobj1 mesh has a name - it should not, ever!

Searching in code, found that vgroup edit modifiers dare to create those, will fix, bet you used those here, and applied them?

Holly cow! Issue here is that CDLayer of vgroups for your MEobj1 mesh has a name - it should not, ever! Searching in code, found that vgroup edit modifiers dare to create those, will fix, bet you used those here, and applied them?
Author
Member

Our artist, who found the issue is currently on vacation. I'll ask him as soon as he returns.

Our artist, who found the issue is currently on vacation. I'll ask him as soon as he returns.
Author
Member

He used "Data Transfer" and "Dynamic Paint" and then has applied them.

He used "Data Transfer" and "Dynamic Paint" and then has applied them.

This issue was referenced by 2fb56e7157

This issue was referenced by 2fb56e71575528be7c1a2b4b4fdf712d971e6eb5

Yuck! Indeed, DynamicPaint was also adding named CD layer for vgroups, tsktsk…

First weight-editing modifiers fix was in e3d6321530, will fix dynapaint now.

Yuck! Indeed, DynamicPaint was also adding named CD layer for vgroups, tsktsk… First weight-editing modifiers fix was in e3d6321530, will fix dynapaint now.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51520
No description provided.